examples/test/testpolicy3396.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3396
  namespace: namespace91
spec:
  podSelector:
    matchLabels:
      key9: value9
      key19: value23
      key46: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value6
      podSelector:
        matchLabels:
          key19: value1
          key37: value45
